--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,9 @@ version = "0.1.0"
 
 [deps]
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+
+[extras]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+
+[targets]
+build = ["Conda"]
