--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
 version = "0.1.0"
 
 [deps]
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [extras]
