--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ steps:
     /opt/julia/bin/julia -e 'using Pkg; pkg"instantiate"'
     git clone -b tqff/ssh chevron@vs-ssh.visualstudio.com:v3/chevron/ETC-ESD-PkgRegistry.jl/PkgRegistry.jl $(HOME)/.julia/registries/ChevronETC
 
+    export PYTHON=""
     /opt/julia/bin/julia -e 'using Pkg; pkg"add PyCall Conda"'
     /opt/julia/bin/julia -e 'using Conda; Conda.add("numpy")'
     /opt/julia/bin/julia -e 'using Pkg; pkg"dev --local $(HOME)/.julia/dev/Devito"'
