--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           version: '1.5'
       - name: Install dependencies
+        run: apt-get install mpich libmpich-dev
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate(); Pkg.build("Devito")'
       - name: Build and deploy
         env:
