--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
-MPI = "0.15"
+MPI = "0.14, 0.15"
 
 [extras]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
