--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.julia-version }}
+      - name: install mpi
+        run: sudo apt-get install -y openmpi-bin
       - uses: julia-actions/julia-buildpkg@master
       - uses: julia-actions/julia-runtest@master
       - uses: julia-actions/julia-processcoverage@v1
