--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
       - name: install mpi
-        run: sudo apt-get install -y openmpi-bin
+        run: sudo apt-get install -y openmpi-bin libopenmpi-dev
       - uses: julia-actions/julia-buildpkg@master
       - uses: julia-actions/julia-runtest@master
       - uses: julia-actions/julia-processcoverage@v1
