--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -18,6 +18,8 @@ jobs:
         run: sudo apt-get install -y openmpi-bin libopenmpi-dev
       - uses: julia-actions/julia-buildpkg@master
       - uses: julia-actions/julia-runtest@master
+        env:
+          PYTHON: /home/runner/.julia/conda/3
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
