--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -17,6 +17,8 @@ jobs:
       - name: install mpi
         run: sudo apt-get install -y openmpi-bin libopenmpi-dev
       - uses: julia-actions/julia-buildpkg@master
+      - run: ls /home/runner/.julia/conda/3
+      - run: which conda
       - uses: julia-actions/julia-runtest@master
         env:
           PYTHON: /home/runner/.julia/conda/3
