--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: julia-actions/julia-buildpkg@master
       - run: ls /home/runner/.julia/conda/3/bin
       - run: source /home/runner/.julia/conda/3/bin/activate
+      - name: Setup Debug Session
+        uses: csexton/debugger-action@master
       - uses: julia-actions/julia-runtest@master
         env:
           PYTHON: /home/runner/.julia/conda/3
