--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -18,9 +18,7 @@ jobs:
         run: sudo apt-get install -y openmpi-bin libopenmpi-dev
       - uses: julia-actions/julia-buildpkg@master
       - run: ls /home/runner/.julia/conda/3/bin
-      - run: source /home/runner/.julia/conda/3/bin/activate
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+      - run: export PATH=/home/runner/.julia/conda/3/bin/:/home/runner/.julia/conda/3/condabin:$PATH
       - uses: julia-actions/julia-runtest@master
         env:
           PYTHON: /home/runner/.julia/conda/3
