--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -21,7 +21,7 @@ jobs:
       - run: export PATH=/home/runner/.julia/conda/3/bin/:/home/runner/.julia/conda/3/condabin:$PATH
       - uses: julia-actions/julia-runtest@master
         env:
-          PYTHON: /home/runner/.julia/conda/3
+          PYTHON: /home/runner/.julia/conda/3/bin/python3
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
