--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -16,13 +16,14 @@ jobs:
           version: ${{ matrix.julia-version }}
       - name: install mpi
         run: sudo apt-get install -y openmpi-bin libopenmpi-dev
+      - name: download miniconda manually
+        run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+      - name: run install
+        run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
+      - name: run path export
+        run: export PATH=~/miniconda/bin:${PATH}
       - uses: julia-actions/julia-buildpkg@master
-      - run: ls /home/runner/.julia/conda/3/bin
-      - run: export PATH=/home/runner/.julia/conda/3/bin/:/home/runner/.julia/conda/3/condabin:$PATH
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
-        shell: bash
-        env:
-          PYTHON: /home/runner/.julia/conda/3/bin/python3
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
