--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
       - name: install mpi
-        run: sudo apt-get install -y openmpi-bin libopenmpi-dev
+        run: sudo apt-get install -y mpich
       - name: download miniconda manually
         run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
       - name: run install
