--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -1,20 +1,19 @@
-name: Documentation
+name: Tests
 
-on:
-  push:
-    branches:
-      - master
-    tags: '*'
-  pull_request:
+on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        julia-version: [1.5]
+        os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1.0.0
       - uses: julia-actions/setup-julia@latest
         with:
-          version: '1.5'
+          version: ${{ matrix.julia-version }}
       - name: install mpi
         run: sudo apt-get install -y mpich
       - name: download miniconda manually
@@ -27,10 +26,8 @@ jobs:
         shell: bash
         env:
           PYTHON: '~/miniconda/bin/python3'
-      - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-      - name: Build and deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: julia --project=docs/ docs/make.jl
+      - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
