--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.5]
+        julia-version: [1.0, 1.5]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v1.0.0
