--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Devito"
 uuid = "06ed14b1-0e40-4084-abdf-764a285f8c42"
 authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
-version = "0.3.0"
+version = "0.1.0"
 
 [deps]
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -10,6 +10,9 @@ Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
 MPI = "0.14, 0.15"
+PyCall = "1"
+Strided = "1"
+julia = "1"
 
 [extras]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
