--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
-MPI = "0.14, 0.15, 0.16"
+MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
 PyCall = "1"
 Strided = "1"
 julia = "1"
