running mpi tests with mpirun

--- a/Project.toml
+++ b/Project.toml
@@ -27,4 +27,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 benchmark = ["PkgBenchmark"]
 build = ["Conda"]
 demo = ["MPIClusterManagers"]
-test = ["Distributed", "MPIClusterManagers", "Random", "Test"]
+test = ["Random", "Test"]
