--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 [compat]
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
-Strided = "1"
+Strided = "1, 2"
 julia = "1"
 
 [extras]
