--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,10 +23,11 @@ jobs:
         run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
       - name: run path export
         run: export PATH=~/miniconda/bin:${PATH}
+        run: export PATH=`julia -e 'using Conda; print(Conda.PYTHONDIR))'`:${PATH}
       - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
         shell: bash
         env:
-          PYTHON: '~/miniconda/bin/python3'
+          PYTHON: julia -e 'using Conda; print(Conda.PYTHONDIR,"python3")'
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
