--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -26,7 +26,7 @@ jobs:
       - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
         shell: bash
         env:
-          PYTHON: julia -e 'using Conda; print(Conda.PYTHONDIR,"python3")'
+          PYTHON: '~/miniconda/bin/python3'
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
