--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -29,6 +29,7 @@ jobs:
         shell: bash
         env:
           PYTHON: '~/miniconda/bin/python3'
+      - run: julia --color=yes --project -e 'using Pkg; Pkg.build("PyCall")'
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
