--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.6, 1.7]
+        julia-version: [1.9,]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v1.0.0
@@ -21,13 +21,12 @@ jobs:
         run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
       - name: run install
         run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
-
       - name: run path export
         run: export PATH=~/miniconda/bin:${PATH}
-      - run: julia --color=yes --project -e 'import Pkg; Pkg.add("Conda"); using Conda; print(joinpath(Conda.PYTHONDIR,"python3"))'
-      - run: export PYTHON=`julia --color=yes --project -e 'import Pkg; Pkg.add("Conda"); using Conda; print(joinpath(Conda.PYTHONDIR,"python3"))'`
       - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
-      - run: julia --color=yes --project -e 'using Pkg; Pkg.build("PyCall")'
+        shell: bash
+        env:
+          PYTHON: '~/miniconda/bin/python3'
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
