--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,9 +23,10 @@ jobs:
         run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
       - name: run path export
         run: export PATH=~/miniconda/bin:${PATH}
-      - run: export PATH=`julia --color=yes --project -e 'import Pkg; Pkg.add("Conda"); using Conda; print(Conda.PYTHONDIR)`:${PATH}
-      - run: export PYTHON=`julia --color=yes --project -e 'import Pkg; Pkg.add("Conda"); using Conda; print(joinpath(Conda.PYTHONDIR,"python3"))'`
-      - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
+      - run: julia --color=yes --project -e 'ENV["PYTHON"]=~/miniconda/bin/python3; using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
+        shell: bash
+        env:
+          PYTHON: '~/miniconda/bin/python3'
       - run: julia --color=yes --check-bounds=yes --inline=yes --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
