--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,6 +23,7 @@ jobs:
         run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
       - name: run path export
         run: export PATH=~/miniconda/bin:${PATH}
+      - run: python ~/miniconda/bin/pip3 install pytest
       - run: julia --color=yes --project -e 'ENV["PYTHON"]="~/miniconda/bin/python3"; using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end; Pkg.build("PyCall")'
         shell: bash
         env:
