--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Devito"
 uuid = "06ed14b1-0e40-4084-abdf-764a285f8c42"
 authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
-version = "0.10.6"
+version = "0.11.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -14,6 +14,7 @@ MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
 Strided = "1"
 julia = "1"
+LinearAlgebra = "1"
 
 [extras]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
