init method libdl load of libnvomp.so

--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,21 @@
 name = "Devito"
 uuid = "06ed14b1-0e40-4084-abdf-764a285f8c42"
 authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
-version = "0.11.2"
+version = "0.11.3"
 
 [deps]
+Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
+LinearAlgebra = "1"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
 Strided = "1"
 julia = "1"
-LinearAlgebra = "1"
 
 [extras]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
