--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -14,7 +14,7 @@ jobs:
       # Prevent all build to stop if a single one fails
       fail-fast: false
       matrix:
-        julia-version: [1.6, 1.7, 1.8, 1.9]
+        julia-version: [1.6, 1.8, 1.9]
         os: [ubuntu-latest]
         pro: ['devito', 'devitopro']
 
