--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
 Strided = "1"
-julia = "1"
+julia = "1.6, 1.8, 1.9"
 LinearAlgebra = "1"
 
 [extras]
