--- a/Project.toml
+++ b/Project.toml
@@ -10,15 +10,16 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
+LinearAlgebra = "1"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
 Strided = "1"
 julia = "1.6, 1.8, 1.9"
-LinearAlgebra = "1"
 
 [extras]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 MPIClusterManagers = "e7922434-ae4b-11e9-05c5-9780451d2c66"
 PkgBenchmark = "32113eaa-f34f-5b0d-bd6c-c81e245fc73d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -28,4 +29,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 benchmark = ["PkgBenchmark"]
 build = ["Conda"]
 demo = ["MPIClusterManagers"]
-test = ["Random", "Test"]
+test = ["Libdl", "Random", "Test"]
