--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
         version:
           - 1.9
           - 1 # automatically expands to the latest stable 1.x release of Julia
+        devitoversion:
+          - 'devito'
+          - 'devitopro'
         os:
           - ubuntu-latest
         arch:
@@ -25,6 +28,12 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
+      - name: setup devitopro
+        if: matrix.devitoversion == 'devitopro'
+        run: |
+          echo "DEVITO_PRO=${{ secrets.DEVITOPRO }}" >> $GITHUB_ENV
+          echo 'DEVITO_PRO_CC="gcc"' >> $GITHUB_ENV
+          echo 'DEVITO_PRO_CFLAGS="-O2"' >> $GITHUB_ENV
       - name: install mpi
         run: sudo apt-get update
       - run: sudo apt-get install -y mpich libmpich-dev
