--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - 1.9
+          - lts
           - 1 # automatically expands to the latest stable 1.x release of Julia
         devitoversion:
           - 'devito'
