--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,8 @@ jobs:
         if: matrix.devitoversion == 'devito'
         run: julia --color=yes --project -e 'using Pkg; Pkg.build(verbose=true)'
         shell: bash
+        env:
+          PYTHON: '~/miniconda/bin/python3'
       # note Pkg.test docs indicate --inline=no can improve coverage
       - run: julia --color=yes --check-bounds=yes --inline=no --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
