--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,16 @@ jobs:
       - name: download miniconda manually
         run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
       - name: run install
-        run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
+        run: bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
       - name: run path export
-        run: export PATH=~/miniconda/bin:${PATH}
+        run: |
+          echo "$HOME/miniconda/bin:" >> $GITHUB_PATH
+          # Make sure python3 is in working state
+          $HOME/miniconda/bin/python3 -m pip install --upgrade pip
+          $HOME/miniconda/bin/python3 -m pip install --upgrade setuptools
+          # Check python
+          $HOME/miniconda/bin/python3 --version
+          $HOME/miniconda/bin/python3 -c "import distutils; print(distutils.sysconfig.get_config_var('VERSION'))"
       - name: use system MPI
         run: julia -e 'using Pkg; Pkg.add(["MPI", "MPIPreferences"]); using MPIPreferences; MPIPreferences.use_system_binary()'
       - name: run build for devito/devitopro
@@ -44,16 +51,16 @@ jobs:
         run: julia --color=yes --project -e 'using Pkg; Pkg.build(verbose=true)'
         shell: bash
         env:
-          PYTHON: '~/miniconda/bin/python3'
+          PYTHON: '$HOME/miniconda/bin/python3'
+          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
           DEVITO_PRO: ${{ secrets.DEVITOPRO }}
-          DEVITO_PRO_CC: 'gcc'
-          DEVITO_PRO_CFLAGS: '-O2'
       - name: run build for devito
         if: matrix.devitoversion == 'devito'
         run: julia --color=yes --project -e 'using Pkg; Pkg.build(verbose=true)'
         shell: bash
         env:
-          PYTHON: '~/miniconda/bin/python3'
+          PYTHON: '$HOME/miniconda/bin/python3'
+          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
       # note Pkg.test docs indicate --inline=no can improve coverage
       - run: julia --color=yes --check-bounds=yes --inline=no --project -e 'using Pkg; Pkg.test(coverage=true)'
       - uses: julia-actions/julia-processcoverage@v1
@@ -76,11 +83,19 @@ jobs:
       - name: run install
         run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
       - name: run path export
-        run: export PATH=~/miniconda/bin:${PATH}
+        run: |
+          echo "$HOME/miniconda/bin:" >> $GITHUB_PATH
+          # Make sure python3 is in working state
+          $HOME/miniconda/bin/python3 -m pip install --upgrade pip
+          $HOME/miniconda/bin/python3 -m pip install --upgrade setuptools
+          # Check python
+          $HOME/miniconda/bin/python3 --version
+          $HOME/miniconda/bin/python3 -c "import distutils; print(distutils.sysconfig.get_config_var('VERSION'))"
       - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
         shell: bash
         env:
-          PYTHON: '~/miniconda/bin/python3'
+          PYTHON: '$HOME/miniconda/bin/python3'
+          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - run: |
