--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,9 @@ jobs:
           - lts
           - 1 # automatically expands to the latest stable 1.x release of Julia
         devitoversion:
-          - 'devito'
+          - 'main'
           - 'devitopro'
+          - ''
         os:
           - ubuntu-latest
         arch:
@@ -28,45 +29,48 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
+      
       - name: install mpi
         run: sudo apt-get update
       - run: sudo apt-get install -y mpich libmpich-dev
+      
       - name: download miniconda manually
-        run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        run: wget https://repo.anaconda.com/miniconda/Miniconda3-py312_24.5.0-0-Linux-x86_64.sh
+      
       - name: run install
-        run: bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+        run: bash Miniconda3-py312_24.5.0-0-Linux-x86_64.sh -b -p $HOME/miniconda
+      
       - name: run path export
         run: |
           echo "$HOME/miniconda/bin:" >> $GITHUB_PATH
-          # Make sure python3 is in working state
-          $HOME/miniconda/bin/python3 -m pip install --upgrade pip
-          $HOME/miniconda/bin/python3 -m pip install --upgrade setuptools
-          # Check python
-          $HOME/miniconda/bin/python3 --version
-          $HOME/miniconda/bin/python3 -c "import distutils; print(distutils.sysconfig.get_config_var('VERSION'))"
+          echo "PYTHON=$HOME/miniconda/bin/python3" >> $GITHUB_ENV
+          echo "PYCALL_JL_RUNTIME_PYTHON=$HOME/miniconda/bin/python3" >> $GITHUB_ENV
+          echo "CONDA_EXE=$HOME/miniconda/bin/conda" >> $GITHUB_ENV
+
       - name: use system MPI
         run: julia -e 'using Pkg; Pkg.add(["MPI", "MPIPreferences"]); using MPIPreferences; MPIPreferences.use_system_binary()'
+      
       - name: run build for devito/devitopro
         if: matrix.devitoversion == 'devitopro'
         run: julia --color=yes --project -e 'using Pkg; Pkg.build(verbose=true)'
-        shell: bash
         env:
-          PYTHON: '$HOME/miniconda/bin/python3'
-          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
           DEVITO_PRO: ${{ secrets.DEVITOPRO }}
+      
       - name: run build for devito
-        if: matrix.devitoversion == 'devito'
+        if: ! matrix.devitoversion != 'devitopro'
         run: julia --color=yes --project -e 'using Pkg; Pkg.build(verbose=true)'
-        shell: bash
         env:
-          PYTHON: '$HOME/miniconda/bin/python3'
-          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
+          DEVITO_BRANCH: ${{ matrix.devitoversion }}
+      
       # note Pkg.test docs indicate --inline=no can improve coverage
       - run: julia --color=yes --check-bounds=yes --inline=no --project -e 'using Pkg; Pkg.test(coverage=true)'
+      
       - uses: julia-actions/julia-processcoverage@v1
+      
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
+
   docs:
     name: Documentation
     runs-on: ubuntu-latest
@@ -75,34 +79,35 @@ jobs:
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
+      
       - name: install mpi
         run: sudo apt-get update
       - run: sudo apt-get install -y mpich
+      
       - name: download miniconda manually
-        run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        run: wget https://repo.anaconda.com/miniconda/Miniconda3-py312_24.5.0-0-Linux-x86_64.sh
+      
       - name: run install
-        run: bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
+        run: bash Miniconda3-py312_24.5.0-0-Linux-x86_64.sh -b -p ~/miniconda
+      
       - name: run path export
         run: |
           echo "$HOME/miniconda/bin:" >> $GITHUB_PATH
-          # Make sure python3 is in working state
-          $HOME/miniconda/bin/python3 -m pip install --upgrade pip
-          $HOME/miniconda/bin/python3 -m pip install --upgrade setuptools
-          # Check python
-          $HOME/miniconda/bin/python3 --version
-          $HOME/miniconda/bin/python3 -c "import distutils; print(distutils.sysconfig.get_config_var('VERSION'))"
+          echo "PYTHON=$HOME/miniconda/bin/python3" >> $GITHUB_ENV
+          echo "PYCALL_JL_RUNTIME_PYTHON=$HOME/miniconda/bin/python3" >> $GITHUB_ENV
+          echo "CONDA_EXE=$HOME/miniconda/bin/conda" >> $GITHUB_ENV
+
       - run: julia --color=yes --project -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
-        shell: bash
-        env:
-          PYTHON: '$HOME/miniconda/bin/python3'
-          PYCALL_JL_RUNTIME_PYTHON: '$HOME/miniconda/bin/python3'
+
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+      
       - run: |
           julia --project=docs -e '
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
+
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
