--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,18 @@
+authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
 name = "Devito"
 uuid = "06ed14b1-0e40-4084-abdf-764a285f8c42"
-authors = ["Sam Kaplan <Sam.Kaplan@chevron.com>"]
 version = "1.0.0"
-
-[deps]
-MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
 
 [compat]
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 PyCall = "1"
 Strided = "1"
 julia = "1.9"
+
+[deps]
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
+
+[extras]
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
