--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           - 1 # automatically expands to the latest stable 1.x release of Julia
         devitoversion:
           - 'main'
-          - 'devitopro'
+          # - 'devitopro'
           - ''
         os:
           - ubuntu-latest
