--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - lts
+          # - lts
           - 1 # automatically expands to the latest stable 1.x release of Julia
         devitoversion:
-          - 'main'
-          # - 'devitopro'
-          - ''
+          # - 'main'
+          - 'devitopro'
+          # - ''
         os:
           - ubuntu-latest
         arch:
