update ci.yml and if - else in sympy_or UT

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,8 @@ jobs:
       - name: run tests
         run: |
           julia --color=yes --check-bounds=yes --inline=no --project -e 'using Pkg; Pkg.test(coverage=true)'
+        env:
+          DEVITO_BRANCH: ${{ matrix.devitoversion }}
 
       - uses: julia-actions/julia-processcoverage@v1
 
